Version 0.1-0 (2012-11-05)
------------------------------------------------------------------------------

  * initial release
  
  NEW FEATURES
  
  * initial version of Amino Acid Composition descriptor
  * initial version of Dipeptide Composition descriptor
  * initial version of Tripeptide Composition descriptor
  * initial version of Normalized Moreau-Broto Autocorrelation descriptor
  * initial version of Moran Autocorrelation descriptor
  * initial version of Geary Autocorrelation descriptor
  * initial version of CTD - Composition descriptor
  * initial version of CTD - Transition descriptor
  * initial version of CTD - Distribution descriptor
  * initial version of Conjoint Triad descriptor
  * initial version of Sequence Order Coupling Number descriptor
  * initial version of Quasi-Sequence-Order descriptor
  * initial version of Pseudo Amino Acid Composition descriptor
  * initial version of readFASTA()
  * initial version of getUniProt()
