@@ -1,4 +1,5 @@
 export(extractAAC)
+export(extractAPAAC)
 export(extractCTDC)
 export(extractCTDD)
 export(extractCTDT)
